--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>Satner Portfolio</title>
+	<title>Idham Portfolio</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -37,7 +37,7 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
 							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
 							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
 							<li class="nav-item submenu dropdown">
@@ -73,11 +73,11 @@
 					<div class="col-lg-7">
 						<div class="banner_content">
 							<h3 class="text-uppercase">Hell0</h3>
-							<h1 class="text-uppercase">I am rahi satner</h1>
-							<h5 class="text-uppercase">senior wordpress developer</h5>
+							<h1 class="text-uppercase">I am Idham Kholed Rachmawan</h1>
+							<h5 class="text-uppercase">tech anthusiast</h5>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="#"><span>Hire Me</span></a>
-								<a class="primary_btn tr-bg" href="#"><span>Get CV</span></a>
+								<a class="primary_btn" href="#"><span>Get CV</span></a>
+								<!-- <a class="primary_btn tr-bg" href="#"><span>Hire Me</span></a> -->
 							</div>
 						</div>
 					</div>
@@ -108,13 +108,12 @@
 							Introduce about <br>
 							myself</h2>
 						<p>
-							Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven 
-							midst their. Beast creepeth. Fish days.
+							Hello! My name is Idham Kholed Rachmawan. I'm a Computer Science graduate with a passion for web and mobile development. Since I was young, I've been fascinated by technology and how things work.
+							This curiosity led me to explore various programming languages and development tools.
 						</p>
 						<p>
-							Is give may shall likeness made yielding spirit a itself together created after sea 
-							is in beast beginning signs open god you're gathering whose gathered cattle let. 
-							Creature whales fruit unto meat the life beginning all in under give two.
+							In this portfolio, you'll find a collection of projects I've worked on, ranging from simple websites to more complex mobile applications.
+							I'm always eager to try new things and stay up-to-date with the latest technologies.
 						</p>
 						<a class="primary_btn" href="#"><span>Download CV</span></a>
 					</div>
@@ -125,7 +124,7 @@
 	<!--================ End About Us Area =================-->
 
 	<!--================ Srart Brand Area =================-->
-	<section class="brand_area section_gap_bottom">
+	<!-- <section class="brand_area section_gap_bottom">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-6">
@@ -214,7 +213,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!--================ End Brand Area =================-->
 
 	<!--================ Start Features Area =================-->
@@ -223,7 +222,7 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>service offers </h2>
+						<h2>My Expertise </h2>
 						<p>
 							Is give may shall likeness made yielding spirit a itself togeth created 
 							after sea <br> is in beast beginning signs open god you're gathering ithe
@@ -269,10 +268,15 @@
 	<section class="portfolio_area" id="portfolio">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-lg-10">
 					<div class="main_title text-left">
-						<h2>quality work <br>
-							Recently done project </h2>
+						<h2>My Portfolio </h2>
+						<h4>recent project</h4>
+					</div>
+				</div>
+				<div class="col-lg-2">
+					<div class="text-center">
+						<h4><a href="#">All Portfolio</a></h4>
 					</div>
 				</div>
 			</div>
