update home & about

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
+	<link rel="stylesheet" href="css/combined.css">
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -27,8 +28,9 @@
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<button class="navbar-toggler" type="button" data-toggle="collapse"
+						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+						aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -40,22 +42,24 @@
 							<li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
 							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
 							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Pages</a>
+							<!-- <li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+									aria-haspopup="true" aria-expanded="false">Pages</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
-									<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Portfolio Details</a></li>
+									<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Portfolio
+											Details</a></li>
 								</ul>
 							</li>
 							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Blog</a>
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+									aria-haspopup="true" aria-expanded="false">Blog</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
+									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a>
+									</li>
 								</ul>
-							</li>
+							</li> -->
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
@@ -72,8 +76,8 @@
 				<div class="row">
 					<div class="col-lg-7">
 						<div class="banner_content">
-							<h3 class="text-uppercase">Hell0</h3>
-							<h1 class="text-uppercase">I am Idham Kholed Rachmawan</h1>
+							<h3 class="text-uppercase">-------</h3>
+							<h1 class="text-uppercase">Idham Kholed Rachmawan</h1>
 							<h5 class="text-uppercase">tech anthusiast</h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#"><span>Get CV</span></a>
@@ -108,14 +112,17 @@
 							Introduce about <br>
 							myself</h2>
 						<p>
-							Hello! My name is Idham Kholed Rachmawan. I'm a Computer Science graduate with a passion for web and mobile development. Since I was young, I've been fascinated by technology and how things work.
+							Hello! My name is Idham Kholed Rachmawan. I'm a Computer Science graduate with a passion for
+							web and mobile development. Since I was young, I've been fascinated by technology and how
+							things work.
 							This curiosity led me to explore various programming languages and development tools.
 						</p>
 						<p>
-							In this portfolio, you'll find a collection of projects I've worked on, ranging from simple websites to more complex mobile applications.
+							In this portfolio, you'll find a collection of projects I've worked on, ranging from simple
+							websites to more complex mobile applications.
 							I'm always eager to try new things and stay up-to-date with the latest technologies.
 						</p>
-						<a class="primary_btn" href="#"><span>Download CV</span></a>
+						<a class="primary_btn" href="#"><span>More Details</span></a>
 					</div>
 				</div>
 			</div>
@@ -224,7 +231,7 @@
 					<div class="main_title">
 						<h2>My Expertise </h2>
 						<p>
-							Is give may shall likeness made yielding spirit a itself togeth created 
+							Is give may shall likeness made yielding spirit a itself togeth created
 							after sea <br> is in beast beginning signs open god you're gathering ithe
 						</p>
 					</div>
@@ -234,28 +241,28 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s1.png" alt="">
-						<h4>Wp developing</h4>
+						<h4>UI/UX Design</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s2.png" alt="">
-						<h4>UI/ux design</h4>
+						<h4>Website Dev</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s3.png" alt="">
-						<h4>Web design</h4>
+						<h4>Mobile Dev</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s4.png" alt="">
-						<h4>seo optimize</h4>
+						<h4>AI</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
 					</div>
 				</div>
@@ -264,8 +271,189 @@
 	</section>
 	<!--================ End Features Area =================-->
 
+	<!-- START: Portfolio -->
+	<div class="nk-box bg-white" id="projects">
+		<div class="nk-gap-2 mt-5"></div>
+		<div class="main_title">
+			<h2>Portfolio</h2>
+			<p>Donec orci sem, pretium ac dolor et, faucibus faucibus mauris. <br>
+				Etiam,pellentesque faucibus. Vestibulum gravida volutpat ipsum non ultrices.</p>
+		</div>
+		<!-- <div class="nk-gap mnt-6"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2">
+					<div class="text-xs-center">Donec orci sem, pretium ac dolor et, faucibus faucibus mauris.
+						Etiam,pellentesque faucibus. Vestibulum gravida volutpat ipsum non ultrices.
+					</div>
+				</div>
+			</div>
+		</div> -->
+
+		<div class="nk-gap-2 mt-12"></div>
+		<div class="container">
+			<div class="nk-portfolio-list nk-isotope nk-isotope-3-cols">
+
+
+				<div class="nk-isotope-item" data-filter="Mockup">
+					<div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+						<a href="portfolio-details.html" class="nk-portfolio-item-link"></a>
+						<div class="nk-portfolio-item-image">
+							<div style="background-image: url('img/images/portfolio-7-sm.jpg');"></div>
+						</div>
+						<div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+							<div>
+								<h2 class="portfolio-item-title h3">Vinyl Record</h2>
+								<div class="portfolio-item-category">Mockup</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="nk-isotope-item" data-filter="Print">
+					<div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+						<a href="portfolio-details.html" class="nk-portfolio-item-link"></a>
+						<div class="nk-portfolio-item-image">
+							<div style="background-image: url('img/images/portfolio-4-sm.jpg');"></div>
+						</div>
+						<div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+							<div>
+								<h2 class="portfolio-item-title h3">Modern T-Shirt</h2>
+								<div class="portfolio-item-category">Print</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="nk-isotope-item" data-filter="Branding">
+					<div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+						<a href="portfolio-details.html" class="nk-portfolio-item-link"></a>
+						<div class="nk-portfolio-item-image">
+							<div style="background-image: url('img/images/portfolio-5-sm.jpg');"></div>
+						</div>
+						<div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+							<div>
+								<h2 class="portfolio-item-title h3">Minimal Bag</h2>
+								<div class="portfolio-item-category">Branding</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="nk-isotope-item" data-filter="Design">
+					<div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+						<a href="portfolio-details.html" class="nk-portfolio-item-link"></a>
+						<div class="nk-portfolio-item-image">
+							<div style="background-image: url('img/images/portfolio-9-sm.jpg');"></div>
+						</div>
+						<div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+							<div>
+								<h2 class="portfolio-item-title h3">Clean &amp; Groovy</h2>
+								<div class="portfolio-item-category">Design</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="nk-isotope-item" data-filter="Design">
+					<div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+						<a href="portfolio-details.html" class="nk-portfolio-item-link"></a>
+						<div class="nk-portfolio-item-image">
+							<div style="background-image: url('img/images/portfolio-3-sm.jpg');"></div>
+						</div>
+						<div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+							<div>
+								<h2 class="portfolio-item-title h3">Minimal Mobile App</h2>
+								<div class="portfolio-item-category">Design</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="nk-isotope-item" data-filter="Print">
+					<div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+						<a href="portfolio-details.html" class="nk-portfolio-item-link"></a>
+						<div class="nk-portfolio-item-image">
+							<div style="background-image: url('img/images/portfolio-8-sm.jpg');"></div>
+						</div>
+						<div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+							<div>
+								<h2 class="portfolio-item-title h3">White T-Shirt</h2>
+								<div class="portfolio-item-category">Print</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="nk-isotope-item" data-filter="Branding">
+					<div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+						<a href="portfolio-details.html" class="nk-portfolio-item-link"></a>
+						<div class="nk-portfolio-item-image">
+							<div style="background-image: url('img/images/portfolio-2-sm.jpg');"></div>
+						</div>
+						<div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+							<div>
+								<h2 class="portfolio-item-title h3">Business Card</h2>
+								<div class="portfolio-item-category">Branding</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="nk-isotope-item" data-filter="Photography">
+					<div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+						<a href="portfolio-details.html" class="nk-portfolio-item-link"></a>
+						<div class="nk-portfolio-item-image">
+							<div style="background-image: url('img/images/portfolio-6-sm.jpg');"></div>
+						</div>
+						<div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+							<div>
+								<h2 class="portfolio-item-title h3">Heja Stockholm</h2>
+								<div class="portfolio-item-category">Photography</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="nk-isotope-item" data-filter="Photography">
+					<div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+						<a href="portfolio-details.html" class="nk-portfolio-item-link"></a>
+						<div class="nk-portfolio-item-image">
+							<div style="background-image: url('img/images/portfolio-12-sm.jpg');"></div>
+						</div>
+						<div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+							<div>
+								<h2 class="portfolio-item-title h3">Paper Bag</h2>
+								<div class="portfolio-item-category">Photography</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<div class="nk-gap-1 mt-15"></div>
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-4 text-center">
+					<a class="primary_btn" href="#"><span>See More</span></a>
+				</div>
+			</div>
+		</div>
+		<div class="nk-gap-4 mt-15"></div>
+	</div>
+	<!-- END: Portfolio -->
+
 	<!--================Start Portfolio Area =================-->
-	<section class="portfolio_area" id="portfolio">
+	<!-- <section class="portfolio_area" id="portfolio">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-10">
@@ -448,11 +636,11 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!--================End Portfolio Area =================-->
 
 	<!--================ Start Testimonial Area =================-->
-	<div class="testimonial_area section_gap_bottom">
+	<!-- <div class="testimonial_area section_gap_bottom">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
@@ -546,7 +734,7 @@
         		</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!--================ End Testimonial Area =================-->
 
 	<!--================ Start Newsletter Area =================-->
@@ -557,13 +745,17 @@
 					<div class="subscription_box text-center">
 						<h2 class="text-uppercase text-white">get update from anywhere</h2>
 						<p class="text-white">
-							Bearing Void gathering light light his eavening unto dont afraid. 
+							Bearing Void gathering light light his eavening unto dont afraid.
 						</p>
 						<div class="subcribe-form" id="mc_embed_signup">
-							<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
-								<input name="EMAIL" placeholder="Email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email address'" required="" type="email">
+							<form target="_blank" novalidate="true"
+								action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+								method="get" class="subscription relative">
+								<input name="EMAIL" placeholder="Email address" onfocus="this.placeholder = ''"
+									onblur="this.placeholder = 'Email address'" required="" type="email">
 								<div style="position: absolute; left: -5000px;">
-									<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+									<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+										type="text">
 								</div>
 								<button class="primary-btn hover d-inline">Get Started</button>
 								<div class="info"></div>
@@ -600,8 +792,12 @@
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+					Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
+					made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
+						target="_blank">Colorlib</a>
+					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				</p>
 			</div>
 		</div>
 	</footer>
