--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 							<li class="nav-item active"><a class="nav-link" href="about.html">About</a></li>
 							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
 							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-							<li class="nav-item submenu dropdown">
+							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 								 aria-expanded="false">Pages</a>
 								<ul class="dropdown-menu">
@@ -55,7 +55,7 @@
 									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
 									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
 								</ul>
-							</li>
+							</li> -->
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
@@ -66,7 +66,7 @@
 	<!--================ End Header Area =================-->
 
     <!--================ Start Banner Area =================-->
-    <section class="banner_area">
+    <!-- <section class="banner_area">
         <div class="banner_inner d-flex align-items-center">
             <div class="container">
                 <div class="banner_content text-center">
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--================ End Banner Area =================-->
     
    <!--================ Start About Us Area =================-->
@@ -97,13 +97,15 @@
                             Introduce about <br>
                             myself</h2>
                         <p>
-                            Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven 
-                            midst their. Beast creepeth. Fish days.
+                            Hello! My name is Idham Kholed Rachmawan. I'm a Computer Science graduate with a passion for
+							web and mobile development. Since I was young, I've been fascinated by technology and how
+							things work.
+							This curiosity led me to explore various programming languages and development tools.
                         </p>
                         <p>
-                            Is give may shall likeness made yielding spirit a itself together created after sea 
-                            is in beast beginning signs open god you're gathering whose gathered cattle let. 
-                            Creature whales fruit unto meat the life beginning all in under give two.
+                            In this portfolio, you'll find a collection of projects I've worked on, ranging from simple
+							websites to more complex mobile applications.
+							I'm always eager to try new things and stay up-to-date with the latest technologies.
                         </p>
                         <a class="primary_btn" href="#"><span>Download CV</span></a>
                     </div>
@@ -112,99 +114,6 @@
         </div>
     </section>
     <!--================ End About Us Area =================-->
-
-	<!--================ Srart Brand Area =================-->
-	<section class="brand_area section_gap_bottom">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-6">
-                            <div class="single-brand-item d-table">
-                                <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo1.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6">
-                            <div class="single-brand-item d-table">
-                                <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo2.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6">
-                            <div class="single-brand-item d-table">
-                                <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo3.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6">
-                            <div class="single-brand-item d-table">
-                                <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo4.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6">
-                            <div class="single-brand-item d-table">
-                                <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo5.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6">
-                            <div class="single-brand-item d-table">
-                                <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo6.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6">
-                            <div class="single-brand-item d-table">
-                                <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo7.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6">
-                            <div class="single-brand-item d-table">
-                                <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo8.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6">
-                            <div class="single-brand-item d-table">
-                                <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo9.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="offset-lg-2 col-lg-4 col-md-6">
-                    <div class="client-info">
-                        <div class="d-flex mb-50">
-                            <span class="lage">10</span>
-                            <span class="smll">Years Experience Working</span>
-                        </div>
-                        <div class="call-now d-flex">
-                            <div>
-                                <span class="fa fa-phone"></span>
-                            </div>
-                            <div class="ml-15">
-                                <p>call us now</p>
-                                <h3>(+1)-800-555-6789</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--================ End Brand Area =================-->
 
 	<!--================ Start Testimonial Area =================-->
 	<div class="testimonial_area section_gap_bottom">
