--- a/services.html
+++ b/services.html
@@ -40,22 +40,6 @@
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 							<li class="nav-item active"><a class="nav-link" href="services.html">Services</a></li>
 							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Pages</a>
-								<ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="portfolio-details.html">Portfolio Details</a></li>
-								</ul>
-							</li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Blog</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-								</ul>
-							</li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
@@ -66,7 +50,7 @@
 	<!--================ End Header Area =================-->
 
     <!--================ Start Banner Area =================-->
-    <section class="banner_area">
+    <!-- <section class="banner_area">
         <div class="banner_inner d-flex align-items-center">
             <div class="container">
                 <div class="banner_content text-center">
@@ -78,7 +62,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--================ End Banner Area =================-->
 
 	<!--================ Start Features Area =================-->
@@ -87,7 +71,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
                     <div class="main_title">
-                        <h2>service offers </h2>
+                        <h2>My Expertise </h2>
                         <p>
                             Is give may shall likeness made yielding spirit a itself togeth created 
                             after sea <br> is in beast beginning signs open god you're gathering ithe
@@ -99,28 +83,28 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
                         <img src="img/services/s1.png" alt="">
-                        <h4>Wp developing</h4>
+                        <h4>UI/UX Design</h4>
                         <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
                         <img src="img/services/s2.png" alt="">
-                        <h4>UI/ux design</h4>
+                        <h4>Website Dev</h4>
                         <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
                         <img src="img/services/s3.png" alt="">
-                        <h4>Web design</h4>
+                        <h4>Mobile Dev</h4>
                         <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
                         <img src="img/services/s4.png" alt="">
-                        <h4>seo optimize</h4>
+                        <h4>AI</h4>
                         <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
                     </div>
                 </div>
@@ -128,104 +112,6 @@
         </div>
     </section>
     <!--================ End Features Area =================-->
-
-	<!--================ Start Testimonial Area =================-->
-	<div class="testimonial_area section_gap_bottom">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 text-center">
-                    <div class="main_title">
-                        <h2>client say about me</h2>
-                        <p>Is give may shall likeness made yielding spirit a itself togeth created after sea is in beast <br>
-                                beginning signs open god you're gathering ithe</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="testi_slider owl-carousel">
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t1.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t2.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Davil Saden</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t1.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t2.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Davil Saden</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t1.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t2.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Davil Saden</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--================ End Testimonial Area =================-->
     
     <!--================ Start Newsletter Area =================-->
     <section class="newsletter_area">
